# lc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  haskell-streaming-wc-ninaiad.cabal  languages.json  lc.cabal  package.yaml  stack.yaml
app/: Json.hs  Languages.hs  Main.hs  Statistics.hs
sandbox/: example.txt  utf8.txt
src/: Languages.hs  Statistics.hs
test/count-lines/: CountLinesSpec.hs
test/languages/: LanguagesJsonSpec.hs
testdata/01-framework/: readme.md
