cabal-version:      3.0

name:               lc
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Nina Gulevich
maintainer:         nina.m.gulevich@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable lc
    import:           warnings

    main-is:          Main.hs

    other-modules:
        Languages,
        Statistics

    build-depends:
        aeson,
        aeson-pretty,
        base,
        bytestring,
        conduit,
        containers,
        directory,
        filepath,
        HsYAML,
        optparse-applicative,
        regex-tdfa,
        text,
        tuple

    hs-source-dirs:   app

    default-language: Haskell2010
